[gd_scene load_steps=27 format=3 uid="uid://dpu0s8lkmnw4e"]

[ext_resource type="Texture2D" uid="uid://dokk4j8jc28gi" path="res://skyorig.png" id="1_c08ad"]
[ext_resource type="Script" uid="uid://c7oqo28kmnmqv" path="res://grapple_mote.gd" id="2_6t8v0"]
[ext_resource type="Script" uid="uid://m3c87hfehv3w" path="res://BLCKOSCREEN.gd" id="3_6t8v0"]
[ext_resource type="Script" uid="uid://drxhlj2vvvdeb" path="res://PCTEST.gd" id="3_ijkwc"]
[ext_resource type="Script" uid="uid://d1pgho1udu1ib" path="res://cooldownTimers.gd" id="4_6t8v0"]
[ext_resource type="Texture2D" uid="uid://16o8a1l0voeu" path="res://sbs_-_isometric_grid_pack/Grids/256x256/Grid Style A - 256x256 - 128x64.png" id="5_6t8v0"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_gjixm"]
panorama = ExtResource("1_c08ad")

[sub_resource type="Sky" id="Sky_ijkwc"]
sky_material = SubResource("PanoramaSkyMaterial_gjixm")

[sub_resource type="Environment" id="Environment_ijkwc"]
background_mode = 2
sky = SubResource("Sky_ijkwc")
ambient_light_source = 3
ambient_light_color = Color(0.85098, 0.85098, 0.572549, 1)
fog_mode = 1
fog_density = 1.0
fog_depth_curve = 2336.87
volumetric_fog_enabled = true
volumetric_fog_density = 0.0
volumetric_fog_albedo = Color(1, 1, 0.576471, 1)
volumetric_fog_emission_energy = 21.25

[sub_resource type="BoxShape3D" id="BoxShape3D_m3ger"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t4tg0"]
cull_mode = 1
albedo_color = Color(0.109804, 1, 0.337255, 1)

[sub_resource type="BoxMesh" id="BoxMesh_x8vfr"]
material = SubResource("StandardMaterial3D_t4tg0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qrh24"]
cull_mode = 1

[sub_resource type="SphereMesh" id="SphereMesh_fpbl8"]
material = SubResource("StandardMaterial3D_qrh24")

[sub_resource type="SphereShape3D" id="SphereShape3D_0fi6g"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_6t8v0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6t8v0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_m3ger"]

[sub_resource type="Animation" id="Animation_m3ger"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/RESPAWNSCRN:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x8vfr"]
_data = {
&"RESET": SubResource("Animation_m3ger")
}

[sub_resource type="Animation" id="Animation_fpbl8"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/RESPAWNSCRN:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0fi6g"]
_data = {
&"RESPAWNBLCKOUT": SubResource("Animation_fpbl8")
}

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_m3ger"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w524x"]
albedo_texture = ExtResource("5_6t8v0")
uv1_scale = Vector3(0.3, 0.3, 0.3)
uv1_triplanar = true

[sub_resource type="PlaneMesh" id="PlaneMesh_x8vfr"]
material = SubResource("StandardMaterial3D_w524x")
size = Vector2(50, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_fpbl8"]
size = Vector3(50, 1, 50)

[node name="World" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ijkwc")

[node name="Origin" type="GridMap" parent="."]

[node name="CourseDesign" type="Node3D" parent="Origin"]

[node name="GrappleMote" type="Node3D" parent="Origin/CourseDesign"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 25, 0)
script = ExtResource("2_6t8v0")

[node name="OmniLight3D" type="OmniLight3D" parent="Origin/CourseDesign/GrappleMote"]
light_color = Color(0.337255, 0.611765, 0, 1)
light_volumetric_fog_energy = 0.0
shadow_bias = 2.01
omni_range = 5.015
omni_attenuation = 10.0

[node name="StaticBody3D" type="StaticBody3D" parent="Origin/CourseDesign/GrappleMote"]

[node name="GTextures" type="CollisionShape3D" parent="Origin/CourseDesign/GrappleMote/StaticBody3D"]
shape = SubResource("BoxShape3D_m3ger")

[node name="Cube" type="MeshInstance3D" parent="Origin/CourseDesign/GrappleMote/StaticBody3D/GTextures"]
transform = Transform3D(1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 0, 0, 0)
mesh = SubResource("BoxMesh_x8vfr")

[node name="Sphere" type="MeshInstance3D" parent="Origin/CourseDesign/GrappleMote/StaticBody3D/GTextures"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
mesh = SubResource("SphereMesh_fpbl8")

[node name="Area3D" type="Area3D" parent="Origin/CourseDesign/GrappleMote"]
gravity_space_override = 3
gravity_point = true
linear_damp_space_override = 1
linear_damp = 0.0
angular_damp_space_override = 1
angular_damp = 0.0

[node name="StaticBody3D" type="CollisionShape3D" parent="Origin/CourseDesign/GrappleMote/Area3D"]
transform = Transform3D(50, 0, 0, 0, 50, 0, 0, 0, 50, 0, 0, 0)
shape = SubResource("SphereShape3D_0fi6g")
debug_color = Color(0, 0.647059, 0.231373, 1)

[node name="DeathBorder" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0)

[node name="OOB" type="Area3D" parent="DeathBorder"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DeathBorder/OOB"]
shape = SubResource("WorldBoundaryShape3D_6t8v0")

[node name="RESPAWNDELAY" type="Timer" parent="DeathBorder"]

[node name="Player" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.82221, 0)

[node name="PCBOD" type="CharacterBody3D" parent="Player"]
script = ExtResource("3_ijkwc")

[node name="Camera3D" type="Camera3D" parent="Player/PCBOD"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.610054, 0)
v_offset = 2.0

[node name="CharBody" type="CollisionShape3D" parent="Player/PCBOD"]
shape = SubResource("CapsuleShape3D_6t8v0")

[node name="CharArea" type="Area3D" parent="Player/PCBOD"]

[node name="DetectionArea" type="CollisionShape3D" parent="Player/PCBOD/CharArea"]
shape = SubResource("CapsuleShape3D_m3ger")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/PCBOD"]
libraries = {
&"": SubResource("AnimationLibrary_x8vfr"),
&"PLAYER": SubResource("AnimationLibrary_0fi6g")
}
script = ExtResource("3_6t8v0")

[node name="RESPAWNSCRN" type="ColorRect" parent="Player/PCBOD/AnimationPlayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)
metadata/_edit_use_anchors_ = true

[node name="JBCLD" type="Timer" parent="Player"]
one_shot = true
script = ExtResource("4_6t8v0")

[node name="DASHCLD" type="Timer" parent="Player"]
one_shot = true
script = ExtResource("4_6t8v0")

[node name="DASHENBLD" type="Timer" parent="Player/DASHCLD"]
one_shot = true
script = ExtResource("4_6t8v0")

[node name="DEBUGFLOOR" type="Node3D" parent="."]

[node name="StaticBody3D" type="StaticBody3D" parent="DEBUGFLOOR"]
physics_material_override = SubResource("PhysicsMaterial_m3ger")

[node name="MeshInstance3D" type="MeshInstance3D" parent="DEBUGFLOOR/StaticBody3D"]
mesh = SubResource("PlaneMesh_x8vfr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DEBUGFLOOR/StaticBody3D"]
shape = SubResource("BoxShape3D_fpbl8")

[connection signal="motePos" from="Origin/CourseDesign/GrappleMote" to="Player/PCBOD" method="_on_grapple_mote_mote_pos"]
[connection signal="area_entered" from="Origin/CourseDesign/GrappleMote/Area3D" to="Origin/CourseDesign/GrappleMote" method="_on_area_3d_area_entered"]
[connection signal="area_entered" from="Origin/CourseDesign/GrappleMote/Area3D" to="Player/PCBOD" method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Origin/CourseDesign/GrappleMote/Area3D" to="Origin/CourseDesign/GrappleMote" method="_on_area_3d_area_exited"]
[connection signal="area_exited" from="Origin/CourseDesign/GrappleMote/Area3D" to="Player/PCBOD" method="_on_area_3d_area_exited"]
[connection signal="area_entered" from="DeathBorder/OOB" to="Player/PCBOD" method="_on_oob_area_entered"]
[connection signal="area_entered" from="DeathBorder/OOB" to="Player/PCBOD/AnimationPlayer" method="_on_oob_area_entered"]
[connection signal="dashCD" from="Player/PCBOD" to="Player/DASHCLD/DASHENBLD" method="_on_pcbod_dash_cd"]
[connection signal="jumpBoostCD" from="Player/PCBOD" to="Player/JBCLD" method="_on_pcbod_jump_boost_cd"]
[connection signal="timeout" from="Player/JBCLD" to="Player/PCBOD" method="_on_jbcld_timeout"]
[connection signal="timeout" from="Player/DASHCLD" to="Player/PCBOD" method="_on_dashcld_timeout"]
[connection signal="dashCLD" from="Player/DASHCLD/DASHENBLD" to="Player/DASHCLD" method="_on_dashenbld_dash_cld"]
[connection signal="timeout" from="Player/DASHCLD/DASHENBLD" to="Player/PCBOD" method="_on_dashenbld_timeout"]
